QE-91 chore: fix code alignment and remove hardcoded level attribute in heading

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/media-content-card/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/media-content-card/style.scss
@@ -91,7 +91,6 @@
 
 	// Compact Mode.
 	&--compact {
-		min-width: 312px;
 		max-width: 360px;
 
 		#{$self}__content {
